--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 </head>
 	<body>
 		<h1>Hello World!</h1>
+		<script src="bundle.js"></script>
 		<script>
 			document.write(Date.now());
 		</script>
