--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 	<body>
 		<h1>Hello World!</h1>
 		<script src="bundle.js"></script>
-		<script>
+		<!-- <script>
 			document.write(Date.now());
-		</script>
+		</script> -->
 	</body>
 </html>
