--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
 	<met charset="UTF-8">
+		<script src="https://cdn.polyfill.io/v2/polyfill.js?features-fetch"></script>
 </head>
 	<body>
-		<h1>Hello World!</h1>
+		<h1>Users</h1>
+		<table>
+			<thead>
+				<th>&nbsp;</th>
+				<th>Id</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Email</th>
+			</thead>
+			<tbody id="users">
+
+			</tbody>
+		</table>
+
 		<script src="bundle.js"></script>
-		<!-- <script>
-			document.write(Date.now());
-		</script> -->
 	</body>
 </html>
